<resources>
    <string name="app_name">ZomatoDemo</string>
    <string name="no_internet">There seems to be an issue with the network connection. Try again.</string>
    <string name="back">back button</string>
    <string name="average">Average cost for two :</string>
    <string name="has_online">Has online delivery :</string>
    <string name="delivering_now">Delivering now? :</string>
    <string name="price">Price range : </string>
    <string name="deep">Click here for the deeplink</string>
    <string name="search">Search here for restorents..</string>
</resources>
