<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="androidx.core.content.ContextCompat"/>

        <variable
            name="details"
            type="com.zomato_demo.models.DetailsModel" />

        <variable
            name="activity"
            type="android.app.Activity" />


    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Details.DetailsActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:padding="16dp"
                    android:src="@drawable/ic_left"
                    android:contentDescription="@string/back" />

                <TextView
                    android:id="@+id/tv_venue_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_toEndOf="@id/iv_back"
                    android:scrollHorizontally="true"
                    android:scrollbars="none"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:text="@{details.name}" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                tools:context=".Details.DetailsActivity">

                <ProgressBar
                    android:id="@+id/pg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    />

            </RelativeLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/nv_banner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
               tools:imageUrl="@{details.featuredImage}"
                android:scaleType="centerCrop" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black_alpha_60"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentBottom="true"
                   >

                    <TextView
                        android:id="@+id/tv_place_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:text="@{details.name}"
                        android:gravity="start"/>

                    <TextView
                        android:id="@+id/tv_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:text="@{details.location.address}"
                        android:drawablePadding="5dp"
                        android:gravity="center|start"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/white"
                        android:layout_marginTop="10dp"
                        />


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:gravity="center_vertical"
                        android:layout_marginTop="10dp"
                        >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_alignParentStart="true"
                            android:layout_toStartOf="@+id/ll_trend"
                            android:layout_marginEnd="3dp"
                            android:gravity="center_vertical"
                            >


                            <TextView
                                android:id="@+id/tv_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12sp"
                                android:layout_marginStart="5dp"
                                android:textColor="@color/white"
                                android:text="@{`Cuisines : `+details.cuisines}"
                                android:gravity="center|start"/>




                        </LinearLayout>




                        <LinearLayout
                            android:id="@+id/ll_trend"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:gravity="center_vertical"
                            android:layout_alignParentEnd="true"
                            android:orientation="horizontal">


                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12sp"
                                android:text="@{details.userRating.ratingText}"
                                android:paddingTop="3dp"
                                app:constraint="@{details.userRating.ratingColor}"
                                android:paddingBottom="3dp"
                                android:paddingRight="5dp"
                                android:paddingLeft="5dp"


                                />

                        </LinearLayout>




                    </RelativeLayout>


                </LinearLayout>

            </RelativeLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/average"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{` `+details.averageCostForTwo+``+details.currency}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/price"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:CheckAndset="@{details.priceRange}"
                    app:currency="@{details.currency}"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/delivering_now"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{details.isDeliveringNow.matches(`1`)?` Yes`:` No`}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btDeeplink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deep"/>
            </LinearLayout>

        </LinearLayout>





    </LinearLayout>


</layout>